# emustation

./: CMakeLists.txt
emustation/: CMakeLists.txt  bios.c  bios.h  bus.c  bus.h  common.h  report.c  report.h  spec.h
emustation/cpu/: cpu.c  cpu.h  gte.c  gte.h  instruction.c  instruction.h  syscop.c  syscop.h
frontend/: CMakeLists.txt  main.c
